fix: title having whitespace, stylesheet copyright year

--- a/sass/_nav.scss
+++ b/sass/_nav.scss
@@ -1,6 +1,6 @@
 #site-nav {
-  -webkit-backdrop-filter: saturate(180%) blur(20px);
-  backdrop-filter: saturate(180%) blur(20px);
+  -webkit-backdrop-filter: saturate(180%) blur(10px);
+  backdrop-filter: saturate(180%) blur(10px);
   background-color: var(--nav-bg);
   border-radius: 26px;
   box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1),
